tests/NormalTests/paczka1/small_fuzzy/19029737.err
Error in line 1: 0Laav7J S797 89,3
Error in line 2: A919 S797 35,3
Error in line 7: 4H3Yns S797 34,8
